# DuplicateFinder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Workspace.code-workspace
.github/workflows/: cmake-windows.yml  cmake.yml
DuplicateFinder/: CMakeLists.txt
DuplicateFinder/inc/: DuplicateFinder.hpp
DuplicateFinder/src/: DuplicateFinder.cpp  main.cpp
DuplicateFinderBase/: CMakeLists.txt
DuplicateFinderBase/inc/: DuplicateFinderBase.hpp  Import.hpp
DuplicateFinderBase/src/: DuplicateFinderBase.cpp
DuplicateFinderGUI/: .clang-format  CMakeLists.txt  Config.txt  imgui.ini
DuplicateFinderGUI/inc/: DuplicateFinder.hpp
DuplicateFinderGUI/src/: DuplicateFinder.cpp
DuplicateFinderWxWidgets/: CMakeLists.txt
DuplicateFinderWxWidgets/inc/: main.hpp
DuplicateFinderWxWidgets/src/: IMPORT_wxwidgets.hpp  main.cpp
